<resources>
    <string name="app_name">Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification">Notification</string>
    <string name="map">Map</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="explore">Explore</string>
    <string name="my_order">My Order</string>
    <string name="my_profile">My Profile</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="location">Location</string>

    <string name="permission_one">Turn on notifications for:\n• Alerting others of your location.\n• Tracking the location of others.\n• Safety and Security: receive alerts when someone requests to share their location with you to helps you control who has access to your location.</string>
    <string name="permission_two">The Location permission enables the app to access your current location. This is necessary for the app:\n• To share your location with your friend.\n• In emergency cases, the app can send SOS alerts immediately with your location to friends.</string>
    <string name="permission_three">The \"Stop battery optimization\" permission ensures that the app continues to run in the background, it\'s necessary for:\n• Continuous location updates.\n• Maintaining connection.\n\nThere is the potential that granting this permission can increase the app\'s battery usage. However, it is necessary because of improving the performance and reliability of the location-sharing app.</string>
    <string name="permission_four">Enable the app to run in the background and autostart to to access your current location. This is necessary for the app:\n• To share your location with your friend.\n• In emergency cases, the app can send SOS alerts immediately with your location to friends.</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>