<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/orderFragment"
        android:icon="@drawable/icon_order"
        android:title="@string/my_order" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/icon_profile"
        android:title="@string/my_profile" />

    <item
        android:id="@+id/addressFragment"
        android:icon="@drawable/icon_map"
        android:title="@string/delivery_address" />

    <item
        android:id="@+id/paymentMethodFragment"
        android:icon="@drawable/icon_payment"
        android:title="@string/payment_methods" />

    <item
        android:id="@+id/settingFragment"
        android:icon="@drawable/icon_setting"
        android:title="@string/settings" />
</menu>